# yumi_gazebo_playground

./: .gitignore  README.md
gazebo_mimic/src/gazebo_mimic_plugin/: mimic_plugin.cpp
yumi_description/meshes/gripper/coarse/: finger.stl
yumi_description/urdf/: yumi.urdf.xacro
yumi_gazebo/: CMakeLists.txt  copy_models.py  package.xml
yumi_gazebo/launch/: mp_test.launch  rod_cable_test.launch  wrap_env.launch  yumi_gazebo_moveit.launch
yumi_gazebo/models/: move_model.py
yumi_gazebo/models/cable/: gen_cable.py  model (copy).sdf  model.config  model.sdf  xml_utility.py
yumi_gazebo/models/camera/: model.config  model.sdf
yumi_gazebo/models/rod/: model (copy).sdf  model.config  model.sdf  triangluar_stand.sdf
yumi_gazebo/msg/: CylinderProperties.msg
yumi_gazebo/src/: plugin.cpp
yumi_gazebo/worlds/: mp_test.world  rod_cable_test.world  yumi.world
yumi_hw/src/: yumi_hw.cpp
yumi_launch/launch/: yumi_gazebo_coil.launch  yumi_gazebo_pos_control.launch  yumi_gazebo_traj_pos_control.launch  yumi_gazebo_traj_vel_control.launch  yumi_gazebo_vel_control.launch  yumi_pos_control.launch  yumi_traj_pos_control.launch  yumi_traj_vel_control.launch  yumi_vel_control.launch
yumi_moveit_config/launch/: demo.launch  demo_coil_gazebo.launch  moveit.rviz
